# EvoX-replication

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
configs/: blackbox_evox_mock.yaml  blackbox_openai.yaml  blackbox_openai_strategy.yaml  blackbox_static_random.yaml  smoke.yaml  suite_smoke.yaml
docs/: FAITHFULNESS.md  ROADMAP.md
evox/: __init__.py
evox/core/: __init__.py  descriptor.py  engine.py  node.py  operators.py  population.py  progress.py  strategy.py  strategy_history.py  strategy_interpreter.py
evox/eval/: __init__.py  result.py  runner.py
evox/llm/: __init__.py  client.py  parsers.py  solution_prompts.py  strategy_prompts.py
evox/logging/: __init__.py  event_log.py  usage.py
evox/tasks/: __init__.py  base.py  blackbox.py  registry.py
scripts/: _bootstrap.py  run_smoke.py  run_suite.py  run_task.py  summarize_runs.py
tests/: test_descriptor.py  test_engine_smoke.py  test_openai_client.py  test_openai_strategy.py  test_parsers.py  test_strategy_validation.py  test_task_registry.py
