[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evox-replication"
version = "0.1.0"
description = "Minimal, architecture-faithful replication of the EvoX two-level evolutionary search framework."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=5.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = [
    "evox",
    "evox.core",
    "evox.tasks",
    "evox.eval",
    "evox.logging",
    "evox.llm",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
